force-app/main/default/objects/SMS__c/SMS__c.object-meta.xml
<CustomObject>
    <label>SMS</label>
    <nameField>
        <label>SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>