force-app/main/default/objects/SMS__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>SMSs</relationshipLabel>
    <relationshipName>SMSs</relationshipName>
    <type>Lookup</type>
</CustomField>