force-app/main/default/objects/SMS__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>SMSs</relationshipLabel>
    <relationshipName>SMSs</relationshipName>
    <type>Lookup</type>
</CustomField>