force-app/main/default/objects/SMS__c/fields/Sender_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Sender_Mobile_No__c</fullName>
    <label>Sender Mobile No</label>
    <type>Phone</type>
</CustomField>