force-app/main/default/objects/SMS__c/fields/Visit_Pre_Registration__c.field-meta.xml
<CustomField>
    <fullName>Visit_Pre_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Pre Registration</label>
    <referenceTo>Visit_Pre_Registration__c</referenceTo>
    <relationshipLabel>SMSs</relationshipLabel>
    <relationshipName>SMSs</relationshipName>
    <type>Lookup</type>
</CustomField>