force-app/main/default/objects/SMS__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>